# FPLAgent

./: .dockerignore  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: ai_agent.py  app.py  data_acquisition.py  data_processing.py  fastapi_app.py  models.py
