[tool.poetry]
name = "FPLAgent"
version = "0.1.0"
description = "A Gen AI Agent for Fantasy Premier League"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.0"
streamlit = "^1.29.0"
sqlalchemy = "^2.0.23"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
langgraph = "^0.0.10"
langchain = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
